# chrome-remote-interface-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  tests.yml
examples/: simple.rs
model/: Cargo.toml  README.md  build.rs  protocol.json
model/src/: lib.rs
model/tools/: Cargo.toml
model/tools/src/: check_features.rs  lib.rs  render.rs
model/tools/src/render/: tests.rs
src/: browser.rs  client.rs  lib.rs  os.rs  pipe.rs  process.rs
src/os/: unix.rs  windows.rs
tests/: connect_default.rs  connect_ws.rs  simple.rs  twice.rs
tests/common/: mod.rs
