[package]
name = "chrome-remote-interface"
version = "0.1.0-alpha.2"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Chrome DevTools Protocol Client."
repository = "https://github.com/yskszk63/chrome-remote-interface-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["chrome", "chromium", "headless", "cdp"]
categories = ["api-bindings", "web-programming"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
tempfile = "3.2"
bytes = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.19"
tokio-pipe = "0.2"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.0"
features = [
    "fs",
    "time",
    "process",
    "io-util",
]

[dependencies.tokio-tungstenite]
version = "0.13"
features = [
    "default",
]

[dependencies.url]
version = "2.2"
features = [
    "serde",
]

[dependencies.chrome-remote-interface-model]
version = "0.1.0-alpha.1"
path = "model"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
pretty_env_logger = "0.4"

[features]
default = []
experimental = ["chrome-remote-interface-model/experimental"]

[workspace]
members = [
    "model",
    "model/tools",
]
