[package]
name = "chrome-remote-interface-model"
version = "0.1.0-alpha.7"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Chrome DevTools Protocol message model."
repository = "https://github.com/yskszk63/chrome-remote-interface-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["chrome", "chromium", "headless", "cdp"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[build-dependencies]
anyhow = "1.0"

[build-dependencies.chrome-remote-interface-model-tools]
version = "0.1.0-alpha.7"
path = "tools"

[features]
default = ["Browser", "Target", "Page"]
experimental = []

Accessibility = ["experimental", "DOM"]
Animation = ["experimental", "Runtime", "DOM"]
ApplicationCache = ["experimental", "Page"]
Audits = ["experimental", "Network"]
BackgroundService = ["experimental"]
Browser = []
CSS = ["experimental", "DOM", "Page"]
CacheStorage = ["experimental"]
Cast = ["experimental"]
Console = ["Runtime"]
DOM = ["Runtime"]
DOMDebugger = ["DOM", "Debugger", "Runtime"]
DOMSnapshot = ["experimental", "CSS", "DOM", "DOMDebugger", "Page"]
DOMStorage = ["experimental"]
Database = ["experimental"]
Debugger = ["Runtime"]
DeviceOrientation = ["experimental"]
Emulation = ["DOM", "Page", "Runtime"]
Fetch = ["Network", "IO", "Page"]
HeadlessExperimental = ["experimental", "Page", "Runtime"]
HeapProfiler = ["experimental", "Runtime"]
IO = []
IndexedDB = ["experimental", "Runtime"]
Input = []
Inspector = ["experimental"]
LayerTree = ["experimental", "DOM"]
Log = ["Runtime", "Network"]
Media = ["experimental"]
Memory = ["experimental"]
Network = ["Debugger", "Runtime", "Security"]
Overlay = ["experimental", "DOM", "Page", "Runtime"]
Page = ["Debugger", "DOM", "IO", "Network", "Runtime"]
Performance = []
Profiler = ["Runtime", "Debugger"]
Runtime = []
Schema = []
Security = []
ServiceWorker = ["experimental", "Target"]
Storage = ["experimental", "Browser", "Network"]
SystemInfo = ["experimental"]
Target = []
Tethering = ["experimental"]
Tracing = ["experimental", "IO"]
WebAudio = ["experimental"]
WebAuthn = ["experimental"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
